--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "webpack-cli": "^3.1.2"
   },
   "dependencies": {
+    "@tensorflow/tfjs": "^0.13.3",
     "css-loader": "^1.0.1",
     "node-sass": "^4.9.4",
     "sass-loader": "^7.1.0",
